<resources>
    <string name="app_name" translatable="false">Sudoku Solver</string>

    <string name="btn1" translatable="false">1</string>
    <string name="btn2" translatable="false">2</string>
    <string name="btn3" translatable="false">3</string>
    <string name="btn4" translatable="false">4</string>
    <string name="btn5" translatable="false">5</string>
    <string name="btn6" translatable="false">6</string>
    <string name="btn7" translatable="false">7</string>
    <string name="btn8" translatable="false">8</string>
    <string name="btn9" translatable="false">9</string>

    <string name="solve_str">Solve</string>
    <string name="solve_clear_str">Clear</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="photo_taken_str">Photo Taken</string>
    <string name="open_cam_str">Open Camera</string>
    <string name="close_cam_str">Close Camera</string>
    <string name="generate">GENERATE</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_med">Medium</string>
    <string name="diff_hard">Hard</string>
    <string name="diff_xpert">Expert</string>
    <string name="announce1_str">Select difficulty!</string>
    <string name="cancel">Cancel</string>

</resources>